<resources>
    <string name="app_name">BBDDNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_message">Bienvenidos a mi aplicación!</string>
    <string name="example_text">Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto.
    Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. Este es un ejemplo de texto. </string>
    "

    <string name="name_matricula_alumno">Matricular Alumno</string>
    <string name="listados">Listados</string>
    <string name="matricula_de_un_nuevo_alumno">MATRÍCULA DE UN NUEVO ALUMNO</string>
    <string name="introduce_los_apellidos">Introduce los apellidos</string>
    <string name="introduce_el_nombre">Introduce el nombre</string>
    <string name="introduce_el_dni">Introduce el DNI</string>
    <string name="button_matricular">MATRICULAR</string>
    <string name="button_cancelar">CANCELAR</string>
    <string name="borrar_un_alumno">BORRAR UN ALUMNO</string>
    <string name="modificaci_n_de_un_alumno">MODIFICACIÓN DE UN ALUMNO</string>
    <string name="modificar_alumno">Modificar Alumno</string>
    <string name="borrar_alumno">Borrar Alumno</string>
    <string name="listar_alumnos">Listar Alumnos</string>
    <string name="button_borrar">BORRAR</string>
    <string name="button_modificar">MODIFICAR</string>
</resources>